# libucrypt

./: configure  configure.ac
src/: Makefile.am  Makefile.in  sha256.c
src/aes/: aes.h  aes_dec.c  aes_enc.c  aes_invsbox.c  aes_keyschedule.c  aes_sbox.c
test/: .basic.c.swp  Makefile.am  Makefile.in
